--- a/Frontend/src/pages/teacher/tests.css
+++ b/Frontend/src/pages/teacher/tests.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    max-height: calc(100vh - 100px);
+    max-height: calc(100vh - 80px);
 }
 
 .test-create-content {
@@ -13,6 +13,7 @@
 .tests-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
@@ -36,10 +37,12 @@
     flex-direction: column;
     gap: 20px;
     overflow-y: auto;
+    padding-right: 20px;
 }
 
 .question-container {
     width: 100%;
+    min-height: min-content;
 }
 
 .question-card-content, .answers-container {
@@ -55,6 +58,7 @@
 .panels-container {
     width: 100%;
     display: flex;
+    max-height: calc(100vh - 240px);
 }
 
 .test-create-panel {
@@ -62,7 +66,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 0 20px;
+    padding: 10px 20px;
+    overflow: auto;
 }
 
 #new-answer-container {
@@ -83,5 +88,24 @@
     width: 100%;
     height: calc(100vh - 400px);
     border: 1px solid #1A1A1A;
+    border-radius: 5px;
+}
+
+.questions-container::-webkit-scrollbar, .test-create-panel::-webkit-scrollbar {
+    width: 15px;
+}
+
+.questions-container::-webkit-scrollbar-thumb, .test-create-panel::-webkit-scrollbar-thumb {
+    background-color: #7E8D85;
+    border-radius: 5px;
+    border: 1px solid #3C493F;
+}
+
+.questions-container::-webkit-scrollbar-thumb:hover, .test-create-panel::-webkit-scrollbar-thumb:hover {
+    background-color: #7E8D85;
+}
+
+.questions-container::-webkit-scrollbar-track, .test-create-panel::-webkit-scrollbar-track {
+    background: #3C493F;
     border-radius: 5px;
 }
